objects/Presumptive_Resource__c/Presumptive_Resource__c.object-meta.xml
<CustomObject>
    <label>Presumptive Resource</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presumptive Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>