objects/Presumptive_Resource__c/fields/Child_Resource__c.field-meta.xml
<CustomField>
    <fullName>Child_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Parent Resource Types/Resources</relationshipLabel>
    <relationshipName>Child_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>