objects/Presumptive_Resource__c/fields/Child_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Parent Resource Types/Resources</relationshipLabel>
    <relationshipName>Child_Resource_Types</relationshipName>
    <type>Lookup</type>
</CustomField>