objects/Presumptive_Resource__c/fields/Child_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Child_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Presumptive Resources (Child Unit of Measure)</relationshipLabel>
    <relationshipName>Presumptive_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>