objects/Presumptive_Resource__c/fields/Parent_Resource__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Child Resource Types/Resource</relationshipLabel>
    <relationshipName>Parent_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>