objects/Presumptive_Resource__c/fields/Parent_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Child Resource Types/Resource</relationshipLabel>
    <relationshipName>Parent_Resource_Types</relationshipName>
    <type>Lookup</type>
</CustomField>