objects/Presumptive_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Resource_Type__c</columns>
    <columns>Parent_Resource__c</columns>
    <columns>Child_Resource_Type__c</columns>
    <columns>Child_Resource__c</columns>
    <columns>Child_Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>